[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/vector/domino_icons/blanc_icon.png" type="Texture" id=1]
[ext_resource path="res://script/PlaceHoderItem.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="TextureButton" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 32, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[connection signal="button_down" from="." to="." method="_on_TextureButton_button_down"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
